Bug 1837856 - Notify WeakWorkerRefs in WorkerPrivate::RunLoopNeverRan. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D183077